//============================================================================//
//                                                                            //
//                Copyright Â© 2015 - 2020 Subterranean Security               //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation at:                                //
//                                                                            //
//    https://mozilla.org/MPL/2.0                                             //
//                                                                            //
//=========================================================S A N D P O L I S==//
syntax = "proto3";

package core.net;

import "com/sandpolis/core/instance/group.proto";

option java_package = "com.sandpolis.core.net";
option optimize_for = CODE_SIZE;

// Request: Attempt a group operation.
message RQ_GroupOperation {
    enum GroupOperation {
        GROUP_CREATE = 0;
        GROUP_DELETE = 1;
        GROUP_UPDATE = 2;
    }
    GroupOperation operation = 1;

    repeated core.instance.GroupConfig group_config = 2;
}
